Fix lint issues, enhance test coverage, and improve code structure
- Fixed package structure (com.pulumi -> app)
- Created proper Main.java entry point for Pulumi
- Refactored WebAppStack.java to fix 119 checkstyle warnings
- Added comprehensive unit tests (32 tests for WebAppStackConfig, 18 for WebAppStack)
- Added integration tests for deployment validation (13 tests)
- Improved code coverage with proper exclusions for infrastructure classes
- All builds and tests now pass (63/63 tests passing)

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-authored-by: rajendra-s-aws <rajendra-s-aws@users.noreply.github.com>